# SlicerSEEGContactDetector

./: 404.html  CMakeLists.txt  README.md  TODO.md  index.html  mkdocs.yml
ContactDetector/: ContactDetector.py
ContactDetector/Resources/UI/: ContactDetector.ui
SEEGContactDetector/: CMakeLists.txt  SEEGContactDetector.py
SEEGContactDetector/Resources/UI/: SEEGContactDetector.ui
acknowledgements/: index.html
advanced/: index.html
docs/: acknowledgements.md  advanced.md  index.md  installation.md  module_overview.md  sample_data.md  troubleshooting.md  usage.md
installation/: index.html
module_overview/: index.html
sample_data/: index.html
search/: search_index.json
testing/: dataset.csv  evaluate.ipynb  failed.csv  failed_automatic.csv  process_dataset.ipynb  results.csv  results.ipynb  results_automatic.csv
troubleshooting/: index.html
usage/: index.html
